browser/components/protections/content/protections.css
/* ... */
*
*
:
before
*
:
after
{
box
-
sizing
:
inherit
;
}
body
[
focuseddatatype
=
social
]
{
-
-
tab
-
highlight
:
var
(
-
-
social
-
color
)
;
}
body
[
focuseddatatype
=
cookie
]
{
-
-
tab
-
highlight
:
var
(
-
-
cookie
-
color
)
;
}
body
[
focuseddatatype
=
tracker
]
{
-
-
tab
-
highlight
:
var
(
-
-
tracker
-
color
)
;
}
body
[
focuseddatatype
=
fingerprinter
]
{
-
-
tab
-
highlight
:
var
(
-
-
fingerprinter
-
color
)
;
}
body
[
focuseddatatype
=
cryptominer
]
{
-
-
tab
-
highlight
:
var
(
-
-
cryptominer
-
color
)
;
}
h2
{
font
-
weight
:
700
;
}
#
report
-
title
{
font
-
size
:
20px
;
font
-
weight
:
300
;
margin
-
block
-
end
:
22px
;
}
#
report
-
content
{
width
:
763px
;
margin
:
0
auto
;
}
.
card
-
header
.
wrapper
{
display
:
grid
;
grid
-
template
-
columns
:
repeat
(
7
1fr
)
;
align
-
items
:
center
;
}
#
manage
-
protections
.
card
-
header
>
button
#
get
-
proxy
-
extension
-
link
#
open
-
about
-
logins
-
button
#
sign
-
up
-
for
-
monitor
-
link
{
grid
-
area
:
1
/
5
/
1
/
-
1
;
margin
:
0
;
font
-
size
:
0
.
95em
;
cursor
:
pointer
;
padding
:
10px
;
text
-
align
:
center
;
line
-
height
:
initial
;
}
.
card
:
not
(
.
has
-
logins
)
.
wrapper
div
:
nth
-
child
(
1
)
.
etp
-
card
.
custom
-
not
-
blocking
.
wrapper
div
:
nth
-
child
(
1
)
{
grid
-
area
:
1
/
1
/
1
/
5
;
padding
-
inline
-
end
:
15px
;
}
.
etp
-
card
:
not
(
.
custom
-
not
-
blocking
)
.
wrapper
div
:
nth
-
child
(
1
)
{
grid
-
area
:
1
/
1
/
1
/
8
;
}
.
card
.
has
-
logins
.
wrapper
div
:
nth
-
child
(
1
)
{
grid
-
area
:
1
/
1
/
1
/
-
1
;
}
.
no
-
logins
.
monitor
-
scanned
-
wrapper
.
etp
-
card
.
custom
-
not
-
blocking
.
card
-
body
.
etp
-
card
.
custom
-
not
-
blocking
#
protection
-
details
#
manage
-
protections
.
etp
-
card
.
icon
.
dark
.
mobile
-
app
-
icon
.
dark
a
.
hidden
.
loading
.
card
-
body
.
lockwise
-
card
.
hidden
#
lockwise
-
body
-
content
.
has
-
logins
.
hidden
#
lockwise
-
body
-
content
.
no
-
logins
.
hidden
.
monitor
-
card
.
hidden
.
monitor
-
card
.
no
-
logins
.
card
-
body
.
monitor
-
card
.
no
-
logins
#
monitor
-
header
-
content
a
.
monitor
-
card
.
no
-
logins
.
monitor
-
scanned
-
text
.
monitor
-
card
.
no
-
logins
.
icon
-
small
.
monitor
-
card
.
has
-
logins
#
sign
-
up
-
for
-
monitor
-
link
#
monitor
-
body
-
content
.
monitor
-
breached
-
passwords
.
hidden
.
loading
a
.
loading
button
.
loading
.
wrapper
.
proxy
-
card
.
hidden
.
card
-
body
.
hidden
.
hidden
{
display
:
none
;
}
.
icon
{
width
:
64px
;
height
:
64px
;
grid
-
column
:
1
;
margin
:
0
auto
;
z
-
index
:
1
;
}
media
(
prefers
-
color
-
scheme
:
dark
)
{
:
root
{
-
-
social
-
highlight
-
color
:
#
9661FF
;
-
-
cookie
-
highlight
-
color
:
#
2BA8FF
;
-
-
tracker
-
highlight
-
color
:
#
39E1BC
;
-
-
fingerprinter
-
highlight
-
color
:
#
FFB65E
;
-
-
cryptominer
-
highlight
-
color
:
#
BEBECA
;
}
.
etp
-
card
.
icon
.
dark
{
display
:
block
;
}
.
etp
-
card
.
icon
.
light
{
display
:
none
;
}
.
mobile
-
app
-
icon
.
dark
{
display
:
block
;
}
.
mobile
-
app
-
icon
.
light
{
display
:
none
;
}
}
.
card
{
display
:
grid
;
grid
-
template
-
columns
:
100
%
;
grid
-
template
-
rows
:
20
%
auto
;
padding
:
0
;
margin
-
block
-
end
:
25px
;
line
-
height
:
1
.
3em
;
}
.
card
-
header
.
card
-
body
{
display
:
grid
;
grid
-
template
-
columns
:
1fr
7fr
;
padding
:
var
(
-
-
card
-
padding
)
;
grid
-
gap
:
var
(
-
-
card
-
padding
)
;
}
.
card
.
card
-
title
{
font
-
size
:
inherit
;
line
-
height
:
1
.
25
;
margin
:
0
;
cursor
:
default
;
}
.
card
.
content
{
margin
-
block
:
5px
0
;
font
-
size
:
.
93em
;
cursor
:
default
;
color
:
var
(
-
-
in
-
content
-
deemphasized
-
text
)
;
}
.
exit
-
icon
{
position
:
absolute
;
width
:
var
(
-
-
exit
-
icon
-
size
)
;
height
:
var
(
-
-
exit
-
icon
-
size
)
;
top
:
var
(
-
-
exit
-
icon
-
position
)
;
inset
-
inline
-
end
:
var
(
-
-
exit
-
icon
-
position
)
;
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
stop
.
svg
)
;
background
-
size
:
calc
(
var
(
-
-
exit
-
icon
-
size
)
-
2px
)
;
background
-
color
:
transparent
;
background
-
position
:
center
;
background
-
repeat
:
no
-
repeat
;
-
moz
-
context
-
properties
:
fill
;
fill
:
var
(
-
-
in
-
content
-
deemphasized
-
text
)
;
padding
:
0
;
margin
:
0
;
min
-
width
:
1px
;
min
-
height
:
1px
;
}
.
exit
-
icon
:
enabled
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
)
;
}
.
exit
-
icon
:
enabled
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
.
custom
-
not
-
blocking
.
content
{
margin
-
block
-
end
:
5px
;
}
.
custom
-
not
-
blocking
#
manage
-
protections
{
display
:
initial
;
}
#
protection
-
details
{
margin
-
block
:
24px
0
;
padding
-
inline
:
24px
3px
;
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
settings
.
svg
"
)
no
-
repeat
3px
3px
;
font
-
size
:
0
.
75em
;
cursor
:
default
;
width
:
max
-
content
;
}
#
protection
-
details
:
dir
(
rtl
)
{
background
-
position
-
x
:
right
3px
;
}
#
protection
-
details
:
hover
#
protection
-
details
:
focus
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
)
;
}
#
protection
-
details
:
hover
:
active
{
background
-
color
:
var
(
-
-
in
-
content
-
button
-
background
-
hover
)
;
}
#
protection
-
details
:
-
moz
-
focusring
{
outline
:
none
;
}
#
protection
-
details
span
{
font
-
weight
:
bold
;
}
.
card
.
card
-
body
{
border
-
block
-
start
:
1px
solid
var
(
-
-
in
-
content
-
border
-
color
)
;
grid
-
column
:
span
2
;
grid
-
row
:
2
;
position
:
relative
;
}
.
body
-
wrapper
{
grid
-
column
:
2
;
}
#
graph
-
week
-
summary
#
graph
-
total
-
summary
{
font
-
size
:
0
.
8em
;
}
#
graph
-
week
-
summary
{
font
-
weight
:
bold
;
}
#
graph
-
wrapper
{
width
:
100
%
;
margin
-
block
:
33px
25px
;
}
#
graph
{
display
:
grid
;
grid
:
repeat
(
10
1fr
)
max
-
content
/
repeat
(
7
1fr
)
;
height
:
130px
;
margin
-
block
-
end
:
10px
;
}
/* ... */

